overlay: Set the device hostname like the device name in About Phone
Change-Id: I928e00454c7e7cac4cb0ebf1e01e4338328786c7

--- a/overlay/common/packages/modules/NetworkStack/res/values/config.xml
+++ b/overlay/common/packages/modules/NetworkStack/res/values/config.xml
@@ -22,4 +22,8 @@
          this resource. It will break if the enforcement of overlayable starts.
          -->
     <string name="default_captive_portal_https_url" translatable="false">https://connect.rom.miui.com/generate_204</string>
+
+    <!-- Configuration for including DHCP client hostname option -->
+    <bool name="config_dhcp_client_hostname">true</bool>
+
 </resources>
