--- a/overlay/common/packages/apps/SimpleDeviceConfig/res/values/config.xml
+++ b/overlay/common/packages/apps/SimpleDeviceConfig/res/values/config.xml
@@ -58,13 +58,15 @@
         <item>device_personalization_services/Attention__margin_vertical_px=1000</item>
         <item>device_personalization_services/Attention__proximity_sensor_enabled=false</item>
 
+        <!-- Select text on recents -->
+        <item>device_personalization_services/Overview__enable_overview=true</item>
+
         <!-- Disable unused AiAi features -->
         <item>device_personalization_services/Autofill__enable=false</item>
         <item>device_personalization_services/Autofill__enable_fa=false</item>
         <item>device_personalization_services/Fedex__enable_fedex=false</item>
         <item>device_personalization_services/Logging__enable_aiai_clearcut_logging=false</item>
         <item>device_personalization_services/NotificationAssistant__enable_service=false</item>
-        <item>device_personalization_services/Overview__enable_overview=false</item>
         <item>device_personalization_services/VisualCortex__enable=false</item>
     </string-array>
 </resources>
